# Experimental-Parity-Lib-for-iOS

./: Cargo.toml  Readme.md
logger/src/: rotating.rs
parity/: configuration.rs  lib.rs  main.rs
parity-clib/: Cargo.toml  Readme.md  parity.h
parity-clib/src/: lib.rs  main.rs
