[package]
description = "C bindings for the Parity Ethereum client"
name = "parity-clib"
version = "1.12.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]

[lib]
name = "parity"
path = "src/lib.rs"
crate-type = ["staticlib"]

[[bin]]
name = "libexample"
path = "src/main.rs"
doc = false

[dependencies]
panic_hook = { path = "../util/panic_hook" }
parity-ethereum = { path = "../", default-features = false }

[features]
default = []
final = ["parity-ethereum/final"]
